fix: battell module image wrong color

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -570,7 +570,7 @@
 .button_background_sterling .progress_box.available { background-image: url('https://onexys.herokuapp.com/images/progress_bar/sterling_0.png'); }
 .button_background_schwarzman .progress_box.available { background-image: url('https://onexys.herokuapp.com/images/progress_bar/schwarzman_0.png'); }
 .button_background_woolsey .progress_box.available { background-image: url('https://onexys.herokuapp.com/images/progress_bar/woolsey_0.png'); }
-.button_background_battel .progress_box.available { background-image: url('https://onexys.herokuapp.com/images/progress_bar/battell_0.png'); }
+.button_background_battell .progress_box.available { background-image: url('https://onexys.herokuapp.com/images/progress_bar/battell_0.png'); }
 .button_background_dwight .progress_box.available { background-image: url('https://onexys.herokuapp.com/images/progress_bar/dwight_0.png'); }
 .button_background_green .progress_box.available { background-image: url('https://onexys.herokuapp.com/images/progress_bar/green_0.png'); }
 .button_background_saybrook .progress_box.available { background-image: url('https://onexys.herokuapp.com/images/progress_bar/saybrook_0.png'); }
@@ -591,7 +591,7 @@
 .button_background_sterling .progress_box.completed { background-image: url('https://onexys.herokuapp.com/images/progress_bar/sterling_1.png'); }
 .button_background_schwarzman .progress_box.completed { background-image: url('https://onexys.herokuapp.com/images/progress_bar/schwarzman_1.png'); }
 .button_background_woolsey .progress_box.completed { background-image: url('https://onexys.herokuapp.com/images/progress_bar/woolsey_1.png'); }
-.button_background_battel .progress_box.completed { background-image: url('https://onexys.herokuapp.com/images/progress_bar/battell_1.png'); }
+.button_background_battell .progress_box.completed { background-image: url('https://onexys.herokuapp.com/images/progress_bar/battell_1.png'); }
 .button_background_dwight .progress_box.completed { background-image: url('https://onexys.herokuapp.com/images/progress_bar/dwight_1.png'); }
 .button_background_green .progress_box.completed { background-image: url('https://onexys.herokuapp.com/images/progress_bar/green_1.png'); }
 .button_background_saybrook .progress_box.completed { background-image: url('https://onexys.herokuapp.com/images/progress_bar/saybrook_1.png'); }
